login and logout working, but doesn't handle error cases

--- a/PinSample/Base.lproj/Main.storyboard
+++ b/PinSample/Base.lproj/Main.storyboard
@@ -8,16 +8,97 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Tab Bar Controller-->
+        <scene sceneID="9NN-b2-Kxp">
+            <objects>
+                <tabBarController id="G7J-LB-1CD" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="DLk-5h-jls">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="uor-gM-6Qo" kind="relationship" relationship="viewControllers" id="bBJ-0H-JRI"/>
+                        <segue destination="Egw-UQ-qQw" kind="relationship" relationship="viewControllers" id="XyK-uA-sW6"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IAC-dh-B9L" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-334" y="-31"/>
+        </scene>
+        <!--Root View Controller-->
+        <scene sceneID="PXd-UB-Kud">
+            <objects>
+                <tableViewController id="jBW-ph-BFo" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="QB3-AX-AZJ">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="787"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="ceU-Qe-VUw">
+                                <rect key="frame" x="0.0" y="50" width="390" height="43.666667938232422"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ceU-Qe-VUw" id="ZAM-Oq-vuD">
+                                    <rect key="frame" x="0.0" y="0.0" width="390" height="43.666667938232422"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="jBW-ph-BFo" id="iVR-Sc-EX1"/>
+                            <outlet property="delegate" destination="jBW-ph-BFo" id="EDL-Jd-LqX"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="eKd-Ul-urN"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MvO-4C-gI1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1595" y="466"/>
+        </scene>
+        <!--On The Map-->
+        <scene sceneID="eIj-0f-HEb">
+            <objects>
+                <navigationController title="On The Map" id="Egw-UQ-qQw" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="P8Z-Kj-Kei"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="nbY-xO-4hs">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="jBW-ph-BFo" kind="relationship" relationship="rootViewController" id="uxf-Ca-zgf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gyZ-A7-8zn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="694" y="466"/>
+        </scene>
+        <!--On The Map-->
+        <scene sceneID="EXo-jN-RW0">
+            <objects>
+                <navigationController title="On The Map" id="uor-gM-6Qo" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="fc7-AH-xFQ"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="DME-37-nvE">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="Q6T-4O-niR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1UN-Mg-eHV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="738" y="-495"/>
+        </scene>
+        <!--Map View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="PinSample" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" userLabel="Map View Controller" customClass="ViewController" customModule="PinSample" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="787"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="wsC-T6-DjN">
@@ -35,13 +116,15 @@
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="wsC-T6-DjN" secondAttribute="bottom" id="oZl-Al-9Xp"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Map" image="mappin.and.ellipse" catalog="system" id="TcV-XM-FCz" userLabel="Map"/>
+                    <navigationItem key="navigationItem" id="XAR-Dj-bsg"/>
                     <connections>
                         <outlet property="mapView" destination="wsC-T6-DjN" id="qdk-b8-F4r"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4" y="-40"/>
+            <point key="canvasLocation" x="1671" y="-495"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="S5C-ep-c2B">
@@ -95,14 +178,19 @@
                     <connections>
                         <outlet property="emailTextField" destination="4Mt-GM-bLd" id="vLf-0d-vIS"/>
                         <outlet property="passwordTextField" destination="J2L-d2-lAr" id="BtZ-JU-wCF"/>
+                        <segue destination="G7J-LB-1CD" kind="presentation" identifier="completeLogin" id="Wy5-Va-aOe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UWh-rP-Imc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1125" y="-41"/>
+            <point key="canvasLocation" x="-1380" y="-31"/>
         </scene>
     </scenes>
     <resources>
+        <image name="mappin.and.ellipse" catalog="system" width="117" height="128"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
