--- a/PinSample/Base.lproj/Main.storyboard
+++ b/PinSample/Base.lproj/Main.storyboard
@@ -29,19 +29,59 @@
         <!--Root View Controller-->
         <scene sceneID="PXd-UB-Kud">
             <objects>
-                <tableViewController id="jBW-ph-BFo" sceneMemberID="viewController">
+                <tableViewController id="jBW-ph-BFo" customClass="StudentTableViewController" customModule="PinSample" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="QB3-AX-AZJ">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="787"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="ceU-Qe-VUw">
-                                <rect key="frame" x="0.0" y="50" width="390" height="43.666667938232422"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="StudentTableViewCell" id="ceU-Qe-VUw" customClass="StudentTableViewCell" customModule="PinSample" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="50" width="390" height="100.33333587646484"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ceU-Qe-VUw" id="ZAM-Oq-vuD">
-                                    <rect key="frame" x="0.0" y="0.0" width="390" height="43.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="390" height="100.33333587646484"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d3H-WA-uGl">
+                                            <rect key="frame" x="5" y="30.000000000000004" width="40" height="40.333333333333343"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="40" id="0cs-am-sag"/>
+                                                <constraint firstAttribute="height" constant="40" id="zVb-Vl-eMR"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AR7-gX-NMK">
+                                            <rect key="frame" x="45" y="49" width="300" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7M7-hr-Ega">
+                                            <rect key="frame" x="45" y="0.0" width="140" height="55"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="140" id="GSg-Zc-1YF"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="7M7-hr-Ega" firstAttribute="leading" secondItem="AR7-gX-NMK" secondAttribute="leading" id="1TC-Ga-aAI"/>
+                                        <constraint firstItem="AR7-gX-NMK" firstAttribute="top" secondItem="ZAM-Oq-vuD" secondAttribute="topMargin" constant="38" id="6cR-Gt-hRh"/>
+                                        <constraint firstItem="AR7-gX-NMK" firstAttribute="centerX" secondItem="ZAM-Oq-vuD" secondAttribute="centerX" id="9ws-lt-fgL"/>
+                                        <constraint firstItem="7M7-hr-Ega" firstAttribute="top" secondItem="ZAM-Oq-vuD" secondAttribute="topMargin" constant="-11" id="Dlt-TR-0xG"/>
+                                        <constraint firstItem="7M7-hr-Ega" firstAttribute="leading" secondItem="d3H-WA-uGl" secondAttribute="trailing" id="LBU-G5-Axd"/>
+                                        <constraint firstItem="d3H-WA-uGl" firstAttribute="leading" secondItem="ZAM-Oq-vuD" secondAttribute="leading" constant="5" id="UWg-CY-eoj"/>
+                                        <constraint firstAttribute="bottom" secondItem="d3H-WA-uGl" secondAttribute="bottom" constant="30" id="ePn-Vn-609"/>
+                                        <constraint firstItem="d3H-WA-uGl" firstAttribute="top" secondItem="ZAM-Oq-vuD" secondAttribute="top" constant="30" id="iOB-9d-viz"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="7M7-hr-Ega" secondAttribute="bottom" constant="34.333335876464844" id="xAS-rC-DvE"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="pinImageView" destination="d3H-WA-uGl" id="Dmx-YC-Hjf"/>
+                                    <outlet property="studentName" destination="7M7-hr-Ega" id="G0X-Cq-Xib"/>
+                                    <outlet property="url" destination="AR7-gX-NMK" id="CPI-nQ-5Hf"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -53,7 +93,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MvO-4C-gI1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1595" y="466"/>
+            <point key="canvasLocation" x="1593.8461538461538" y="465.63981042654024"/>
         </scene>
         <!--On The Map-->
         <scene sceneID="eIj-0f-HEb">
